[fix] remove "position" from .outer-wrap

--- a/app/assets/stylesheets/redesign/_index.css.scss
+++ b/app/assets/stylesheets/redesign/_index.css.scss
@@ -324,7 +324,6 @@
         @include order(1);
 
         .outer-wrap {
-          position: absolute;
           top: 0;
           bottom: 0;
           left: 15px;
